css/styles.css
/* ... */
.green-bg {
	background: #34d293;
}
.blue-bg {
	background: #3ab0e2;
}
.yellow-bg {
	background: #E7AC44;
}
.dark-bg {
	background: #404040;
}
.white-bg {
	background:  #FFFFFF;
}

/** FOR TEXTS AND ICON FONTS **/
.red-text {
	color: #e96656;
}
.green-text {
	color: #34d293;
}
.blue-text {
	color: #3ab0e2;
}
.yellow-text {
	color: #f7d861;
}
.dark-text {
	color: #404040;
}
.white-text {
	color: #FFFFFF;
}

/*---------------------------------------
 **   BORDER BOTTOMS                 -----
-----------------------------------------*/

.white-border-bottom:before {
	position: absolute;
	margin: auto;
	z-index: 1;
	content: "";
	width: 50%;
	height: 2px;
	background: #F5F5F5;
	bottom: -9px;
	left: 25%;
}
.dark-border-bottom:before {
	position: absolute;
	margin: auto;
	z-index: 1;
	content: "";
	width: 50%;
	height: 2px;
	background: #404040;
	bottom: -9px;
	left: 25%;
}
.red-border-bottom:before {
	position: absolute;
	margin: auto;
	z-index: 1;
	content: "";
	width: 75%;
	height: 2px;
	background: #78a7f0;
	bottom: -9px;
	left: 12.5%;
}
.green-border-bottom:before {
	position: absolute;
	margin: auto;
	z-index: 1;
	content: "";
	width: 75%;
	height: 2px;
	background: #34d293;
	bottom: -9px;
	left: 12.5%;
}
.blue-border-bottom:before {
	position: absolute;
	margin: auto;
	z-index: 1;
	content: "";
	width: 75%;
	height: 2px;
	background: #3ab0e2;
	bottom: -9px;
	left: 12.5%;
}
.yellow-border-bottom:before {
	position: absolute;
	margin: auto;
	z-index: 1;
	content: "";
	width: 75%;
	height: 2px;
	background: #f7d861;
	bottom: -9px;
	left: 12.5%;
}

/*---------------------------------------
 **   FORM                           -----
-----------------------------------------*/

.input-box {
	border: 0;
	width: 274px;
	text-align: left;
	text-transform: none;
	padding: 9px;
	min-height: 46px;
	padding-left: 15px;
	display: inline-block;
	border-radius: 4px;
	background: rgba(255,255,255, 0.95);
}
.textarea-box {
	border: 0;
	text-align: left;
	text-transform: none;
	padding: 9px;
	min-height: 250px;
	padding-left: 15px;
	display: inline-block;
	border-radius: 4px;
	background: rgba(255,255,255, 0.95);
}
 textarea:hover, 
input:hover, 
textarea:active, 
input:active, 
textarea:focus, 
input:focus {
    outline: 1 !important;
    outline-color: #78a7f0 !important;
    -webkit-appearance:none;
        border:none !important;
  -webkit-box-shadow:none !important;
          box-shadow:none !important;
        }

/*---------------------------------------
 **   SECTION HEADERS                -----
-----------------------------------------*/

/*** SECTION HEADERS ***/
.focus,.works,.about-us,.features,.packages,.products,.testimonial,.contact-us {
	padding-top: 100px;
}
.section-header {
	text-align: center;
	padding-bottom: 75px;
}
.section-header h2 {
	padding-bottom: 10px;
	line-height: 40px;
	position: relative;
	display: inline-block;
}
.section-header h6 {
	font-size: 16px;
}

/* PRE LOADER */
.preloader {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: #fefefe;
	z-index: 99999;
	height: 100%;
	width: 100%;
	overflow: hidden !important;
}
.status {
	width: 200px;
	height: 200px;
	position: absolute;
	left: 50%;
	top: 50%;
	background-image: url(../images/loading.gif);
	background-repeat: no-repeat;
	background-position: center;
	margin: -100px 0 0 -100px;
}

/*---------------------------------------
=========================================
 **   SECTION STYLES                 -----
=========================================
-----------------------------------------*/

/*---------------------------------------
 **   SECTION:  HOME                  -----
-----------------------------------------*/

.header {
	position: relative;
	overflow: hidden;
}

/*----  SECTION:  HOME > TOP BAR   ----*/
.navbar {
	background: #FFF;
	overflow: hidden;
	border: 0;
	border-radius: 0 !important;
	text-align: left;
	-webkit-box-shadow: 0px 5px 11px 0px rgba(50, 50, 50, 0.08);
	        box-shadow: 0px 5px 11px 0px rgba(50, 50, 50, 0.08);
}
#main-nav {
	position: absolute;
	width: 100%;
	z-index: 1000;
	min-height: 75px;
}
#main-nav.fixed {
	position: fixed !important;
    top: 0;
    right: 0;
    width: 95%;
}

@media (max-width: 1024px) and (min-width: 768px){
	#main-nav.fixed {
		width:100% !important;
	}
	.responsive-nav {
	    margin-left: 0;
	}
	.slideshow-wrapper {
		margin-top:12em !important;
	}
}

@media (max-width: 480px){
	#main-nav.fixed {
		width:90%;
	}

	.VRLogo {
        height: 15.4% !important;
    	width: 98% !important;
	}
}

@media screen and (max-width: 700px) {
	#main-nav.fixed {
		width:90%;
	}

	.VRLogo {
		height: 15% !important;
    	width: 71% !important;
	}
}

@media (max-width: 768px){
	#main-nav.fixed {
		width:90%;
	}
}

@media (min-width: 768px){
	.navbar>.container .navbar-brand{
		margin: 0;
    	padding: 0.7em 0em 1em 0em;
	}
}


.navbar-inverse .navbar-nav>li {
	display: inline;
	margin-right: 20px;
	margin-top: 20px;
}
.navbar-inverse .navbar-nav>li:last-child {
	margin-right: 0 !important;
}
.navbar-inverse .navbar-nav>li>a {
	color: #727272;
	padding: 0;
	line-height: 35px;
}
.navbar-brand {
	height: 76px;
	position: relative;
	line-height: 45px;
	padding-top: 23px;
}
.current a {
	color: #FFFFFF !important;
	position: relative;
	outline: none;
}
.current:before {
	position: absolute;
	margin: auto;
	z-index: 1;
	content: "";
	width: 75%;
	height: 2px;
	background: #78a7f0;
	bottom: 0px;
	left: 0;
}
.navbar-inverse .navbar-nav>li>a:hover {
	color: #78a7f0;
	outline: none;
}
.navbar-toggle {
	border: 0;
	background-color: #808080;
}
.navbar-inverse .navbar-toggle:hover,.navbar-inverse .navbar-toggle:focus {
	background-color: #78a7f0;
	filter: alpha(opacity=100);
	opacity: 1;
}

/*----  SECTION:  HOME > INTRO AND SHORT MSGS   ----*/
.intro {
	text-align: center;
	color: #FFF;
	margin-top: 25%;
	line-height: 65px;
	z-index: 0;
}

/* Short Messages */
.bottom-message-section {
	margin-top: 14%;
	position: relative;
}
/* ... */

